# QDigitalMeter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: example_01.py
qdigitalmeter/: __init__.py  qdigitalmeter.py  scales.py
