[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "qdigitalmeter"
version = "0.1.0"
description = "A simple digital peak meter for use with PyQt5, PyQt6, PySide2, and PySide6"
authors = ["Francesco Ceruti <ceppofrancy@gmail.com>"]
license = "LGPL-2.1-or-later"
readme = "README.md"

repository = "https://github.com/FrancescoCeruti/QDigitalMeter"

[tool.poetry.dependencies]
python = "^3.8"
qtpy = "^2.4"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pyqt5 = "^5.15.2"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
